--- a/c_code/a_basic/css/base/common.css
+++ b/c_code/a_basic/css/base/common.css
@@ -8,7 +8,13 @@
   background-repeat: no-repeat;}
 .hidden_wrap button { width: 100%; height: 100%; background-repeat: no-repeat;}
 
-.hidden_wrap a>span, .hidden_wrap button>span { display: block; width: 0; height: 0; overflow: hidden;}
+.hidden_wrap a, .hidden_wrap button {
+  display:block; width: 0;height: 0;overflow: hidden;
+}
+
+.hidden_wrap a > span, .hidden_wrap button > span 
+{ display: block; position: absolute; z-index:-1; width: 0; height: 0; overflow: hidden;}
+
 
 .clearfix:after, .clearfix::after { content:" "; display: block; clear:both;}
 
