--- a/c_code/a_basic/css/base/reset.css
+++ b/c_code/a_basic/css/base/reset.css
@@ -10,7 +10,8 @@ html,body { width:100%; height:100%;
 h1,h2,h3,h4,h5,h6,p,pre,blockquote,q,abbr,address,
 ul,ol,li,dl,dt,dd,
 button,img,hr,
-header,nav,section,article,footer,aside,main,figure,figcaption
+header,nav,section,article,footer,aside,main,figure,figcaption,
+fieldset, input
  { margin: 0; padding: 0; border: 0; outline: 0; }
 
 ul,ol,li { list-style:none; }
