--- a/c_code/a_basic/css/base/reset.css
+++ b/c_code/a_basic/css/base/reset.css
@@ -10,8 +10,7 @@ html,body { width:100%; height:100%;
 h1,h2,h3,h4,h5,h6,p,pre,blockquote,q,abbr,address,
 ul,ol,li,dl,dt,dd,
 button,img,hr,
-header,nav,section,article,footer,aside,main,figure,figcaption,
-fieldset, input
+header,nav,section,article,footer,aside,main,figure,figcaption
  { margin: 0; padding: 0; border: 0; outline: 0; }
 
 ul,ol,li { list-style:none; }
@@ -21,19 +20,48 @@ header,nav,section,article,footer,aside,main,figure,figcaption { display:block;}
 
 a { text-decoration:none;}
 button { background-color: transparent; cursor: pointer; }
-hr { border-bottom:1px solid #333;}
+hr { border:0; margin: 0; border-bottom:1px solid #333;}
 
-a:hover, a:focus, button:hover, button:focus { position:relative; z-index:500; outline:3px solid #f70;}
+a:hover, a:focus, button:hover, button:focus { position:relative; z-index:500; }
+/* outline:3px solid #f70; */
+
+/* form */
+
+fieldset {margin: 0; padding: 0; border:0;}
+legend { display:block; position: absolute; z-index:-1;
+  width: 0; height: 0; overflow: hidden;}
+/* input { border:1px solid #888; box-sizing:border-box;
+  text-indent:0.5rem;} */
+
+input[type="text"],
+input[type="password"],
+input[type="search"],
+input[type="email"],
+input[type="url"],
+input[type="number"],
+input[type="tel"]
+{ border:1px solid #888; box-sizing:border-box;
+  text-indent:0.5rem; cursor: pointer;}
+
+button, input[type="submit"],
+input[type="image"], input[type="reset"]
+{ margin: 0; padding: 0; bottom: 0;
+  background-color: transparent; cursor: pointer;}
+
+textarea, select
+ { margin: 0; padding: 0; border:1px solid #888; box-sizing:border-box;}
+
+
 
 /* variable 지원 여부 파악*/
-@supports (--var:100%){
+/* @supports (--var:100%){
   html,body {color:var(--color-font1);}
   hr {border-bottom:var(--border-line1);}
   a:hover, a:focus,
   button:hover, button:focus {
     outline:3px solid var(--color-point);}
 
-}
+} */
 
 @supports (display:flex){
   .nav { display:flex;}
