--- a/c_code/a_basic/css/src/mediaQuery_01.css
+++ b/c_code/a_basic/css/src/mediaQuery_01.css
@@ -9,6 +9,7 @@
 /* mobile */
 @media screen and (max-width:639px) {
   #wrap { width:100%; height:1000px; background-color: #acf;}
+}
 
 /* tablet */
 @media screen and (min-width:640px) and (max-width:1024px){
