--- a/c_code/monffe_1030/css/src/monffee_main.css
+++ b/c_code/monffe_1030/css/src/monffee_main.css
@@ -6,14 +6,14 @@
 
 @import url('./monffee_wrap.css');
 @import url('./monffee_headBox.css');
-
-#viewBox { width:100%; height:100vh; min-height:800px; background-color: #cf8;}
+@import url('./monffee_viewBox.css');
 
 /* ====================================== */
+
 #bestNewsBox { width:940px; height:1080px; margin:auto;  background-color: #fd3;}
 
 /* ====================================== */
-#issueBox { width:100%; height:auto; min-height:1340px; background-color: #ff4;}
+#issueBox { width:100%; height:auto; min-height:1340px;}
   .issue_text { width:100%; height:860px; background-color: #337;}
   .issue_icon { width:100%; max-width:1260px; margin:auto; height:480px;
     background-color: #77a;}
