--- a/c_code/e_jquery/css/src/1104test_02.css
+++ b/c_code/e_jquery/css/src/1104test_02.css
@@ -14,14 +14,15 @@
 
 .product_wrap { position:relative; width:400px; height:300px;}
 
-  .product { width:100%; height:auto;}
-  .product li { float:left; width:400px; height:300px;}
-  .product li a { display:block; width:100%; height:100%;
-    background-repeat: no-repeat; background-position: 50% 50%;
-    background-size: auto 100%;}
+.product { width:100%; height:auto;}
 
-.product li:nth-child(1) a { background-image: url("../../img/1104/cake_01.jpg");}
-.product li:nth-child(2) a { background-image: url("../../img/1104/cake_02.jpg");}
-.product li:nth-child(3) a { background-image: url("../../img/1104/cake_03.jpg");}
-.product li:nth-child(4) a { background-image: url("../../img/1104/cake_04.jpg");}
-.product li:nth-child(5) a { background-image: url("../../img/1104/cake_05.jpg");}
+.product li { float:left; width:400px; height:300px;
+    background-repeat: no-repeat; background-position: 50% 50%;
+    background-size: 80% auto ;}
+  .product li a { display:block; width:100px; height:50px;}
+
+.product .product_01 { background-image: url("../../img/1104/cake_01.jpg");}
+.product .product_02 { background-image: url("../../img/1104/cake_02.jpg");}
+.product .product_03 { background-image: url("../../img/1104/cake_03.jpg");}
+.product .product_04 { background-image: url("../../img/1104/cake_04.jpg");}
+.product .product_05 { background-image: url("../../img/1104/cake_05.jpg");}
