--- a/c_code/e_jquery/css/src/1104test_02.css
+++ b/c_code/e_jquery/css/src/1104test_02.css
@@ -17,9 +17,12 @@
 .product { width:100%; height:auto;}
 
 .product li { float:left; width:400px; height:300px;
+    padding-top:240px; padding-left:150px; box-sizing: border-box;
     background-repeat: no-repeat; background-position: 50% 50%;
     background-size: 80% auto ;}
-  .product li a { display:block; width:100px; height:50px;}
+  .product li a { display:block; width:100px; height:30px;
+    text-align:center;
+    background-color: #fd0;}
 
 .product .product_01 { background-image: url("../../img/1104/cake_01.jpg");}
 .product .product_02 { background-image: url("../../img/1104/cake_02.jpg");}
