--- a/c_code/e_jquery/css/src/ex_02_slideBtnBanner.css
+++ b/c_code/e_jquery/css/src/ex_02_slideBtnBanner.css
@@ -4,9 +4,8 @@
   margin:auto; margin-bottom:30rem; background-color: #eee;}
 
 .part { position:relative; 
-  width:28rem; height:18.75rem; margin:auto; margin-bottom:2rem;
-  padding:0.5rem; box-sizing: border-box; background-color: #ddb088;
-  ;}
+  width:28rem; height:auto; margin:auto; margin-bottom:2rem;
+  padding:0.5rem; box-sizing: border-box; background-color: #ddb088;}
 
 .slide_btn { position:absolute; top:50%; left:50%; z-index:500;
   transform: translate(-50%);
@@ -24,7 +23,6 @@
   background-size: 50% auto; text-align:center;
   background-color: #fff;}
 .slide_wrap li a { padding:0.3rem 1.5rem;
-
     color: #fff; border-radius:2rem; background-color: #d86;}
   .horizontal_slide ul { width:500%; height:100%; }
   .horizontal_slide li { float:left; width:20%;}
@@ -61,10 +59,32 @@
   position:absolute; bottom:0.5rem; left:50%; transform: translate(-50%);
   width:100%; height:1.5rem; text-align: center;}
 
-  .indicator li { display: inline-block; margin:0 0.5rem; width:1.5rem; height:1.5rem; }
-  .indicator li a { display: block; width:100%; height:100%; border-radius:100%;
-    background-color: #57c;}
-  .indicator li.action a {background-color: #333;}
+.indicator li { 
+  display: inline-block; margin:0 0.5rem; width:1.5rem; height:1.5rem; }
+.indicator li a { 
+  display: block; width:100%; height:100%; border-radius:100%;
+  background-color: #875;}
+.indicator li.action a {background-color: #333;}
 
   .indicator_horizontal_slide .slide_wrap ul { width:500%; height:100%;}
   .indicator_horizontal_slide .slide_wrap li { float:left; width:20%;}
+
+/* ============================================================= */
+
+.indicator_fade_slide { position:relative; padding-bottom:3rem;
+  background-color: #fda;}
+.indicator_fade_slide > .indicator {
+  position:absolute; bottom:0.6rem; left:50%; transform: translate(-50%);
+  width:100%; height:1.5rem; text-align: center;
+}
+
+/* .indicator_fade_slide .indicator li { 
+  display: inline-block; margin:0 0.5rem; width:1.5rem; height:1.5rem; }
+.indicator_fade_slide .indicator li a { 
+  display: block; width:100%; height:100%; border-radius:100%;
+  background-color: #875;}
+.indicator_fade_slide .indicator li.action a {background-color: #333;} */
+
+.indicator_fade_slide .slide_wrap ul { position:relative; z-index:50; width: 100%; height: 100%; }
+.indicator_fade_slide .slide_wrap li { display:none; position:absolute; top: 0; left: 0; width:100%;}
+.indicator_fade_slide .slide_wrap li.action { z-index:200; }
