--- a/c_code/e_jquery/css/src/ex_04_onepagescroll.css
+++ b/c_code/e_jquery/css/src/ex_04_onepagescroll.css
@@ -16,15 +16,15 @@ body { overflow-x: hidden;}
 .close button { width:100%; height:100%; }
 
 #headBox { position:relative; left:50%; transform:translate(-50%);
-  width:100vw; min-width:inherit; height:120px; 
-  padding:0.625rem 1.25rem; box-sizing: border-box;
+  width:100vw; min-width:inherit; height:80px; 
+  padding:10px 20px; box-sizing: border-box;
   background-color: #fdc;}
   
-  h1 { width:100px; height:100px; float:left; color:#fff; font-size:1.5rem;
-    line-height: 100px;
+  h1 { width:100px; height:60px; float:left; color:#fff; font-size:1.5rem;
+    line-height: 60px;
     background-color: #4af;}
 
-  #navBox { float:right; width:40rem; height:3rem; margin-top:3rem;}
+  #navBox { float:right; width:40rem; height:3rem; margin-top:1rem;}
   #navBox > h2 { width: 0; height: 0; overflow:hidden;}
   #navBox ul { width:100%; height:100%;}
   #navBox li { float:left; margin-right:3rem;}
@@ -37,8 +37,42 @@ body { overflow-x: hidden;}
 #conBox_01 { width:100%; height:100rem; border-bottom:1px solid #05b; 
   background-image:linear-gradient(30deg, #ffa, #acf, #fca);}
 
-#conBox_02 { width:100%; height:31.25rem; border-bottom:1px solid #05b; margin-top:2rem;
-  background-color: #fff;}
+  .tab_li { width: 80%; height:40px; margin:auto;
+    background-color: #fff;}
+    .tab_li ul { width: 100%; height: 100%; text-align: center;}
+    .tab_li li { position:relative; display:inline-block; width:auto; height:100%; margin:0 2rem;}
+    .tab_li li:after { content:" "; display: block; position: absolute; right:-2rem; top:10%; z-index:100;
+      width:1px; height:80%; background-color: #666;}
+      .tab_li li:last-child:after { display:none;}
+    .tab_li li a { display:block; width:100%; height:100%; line-height: 40px;}
+
+  .tab_content { width: 80%; height: 500px; margin:auto;
+    padding: 2rem; box-sizing: border-box;
+    background-color: rgba(255,255,255,0.5);}
+  .tab_content div { display:none; width: 100%; height: 100%;}
+  .tab_content p { padding-top:1rem; color:#087;}
+  .tab_content .tab_con_01 { display: block;}
+
+/* ======================================================== */
+
+#conBox_02 { width:100%; height:auto; border-bottom:1px solid #05b; margin-top:2rem;
+  background-image:linear-gradient(60deg, #faf, #acf, #faa);}
+
+  .title_tab_style { width:80%; height:700px; margin:auto; box-sizing: border-box;
+    border:1px solid #666; padding:1rem;}
+  .title_tab_style dl { position:relative; width:100%; height:100%; 
+    background-color: rgba(255,255,255,0.6); }
+  .title_tab_style dt { float:left; width:25%; height:40px;
+    text-transform: uppercase; text-align: center;
+    background-color: #ccc0c0; }
+  .title_tab_style dt a { display: block; width:100%; height:100%; font-size:1.3rem;}
+  .title_tab_style dt.action { background-color: #239; color:#fff; font-weight: 700;}
+
+  .title_tab_style dd { display:none; position:absolute; top:50px; left: 0;
+    width:100%; height:auto; min-height:400px;}
+  .title_tab_style dd:nth-of-type(1) { display:block; }
+
+/* ============================================================= */
 
 .top_move_btn { position: fixed; right:1rem; bottom:3rem;
   width:3.125rem; height:3.125rem; text-align: center; line-height: 3.125rem;
