--- a/c_code/monffee_1030/css/src/monffee_headBox.css
+++ b/c_code/monffee_1030/css/src/monffee_headBox.css
@@ -27,7 +27,7 @@
   #navBox dt{  width:100%; height:120px; }
   #navBox dt > a { position:relative; font-size:1.8rem; 
     display: block; width:100%; height:100%; text-align: center;
-    line-height: 120px;;}
+    line-height: 120px;}
     #navBox dt > a::after { content:" "; display:block;
       position: absolute; top:58%; margin-top:10px; left:50%; transform:translate(-50%);
       width:0; height:4px; background-color: var(--color-primary); 
