--- a/c_code/e_jquery/css/src/1125test.css
+++ b/c_code/e_jquery/css/src/1125test.css
@@ -20,43 +20,36 @@
 /* =========================================== */
 
 #viewBox { position:relative; width:100vw; max-width:1600px; margin:auto;
-  height:100vh; 
-  overflow:hidden;
-  }
+  height:100vh; overflow:hidden;}
 
 .view_indi { position:absolute; bottom:30px; right:5%; z-index:300;
   width:280px; height:34px; border-radius:17px;
   padding:5px; box-sizing:border-box;
   background-color: #555;}
 .view_indi > li a, .view_indi > button { float:left; width:24px; height:24px; 
-  border-radius:12px;  margin-right:5px;
-  background-color: #fff;}
+  border-radius:12px;  margin-right:5px; background-color: #fff;}
   .view_indi > button { float:right; }
   .view_indi > li.action a { background-color: #f33;}
   .view_indi > .next_btn { margin:0;}
 
 /* =========================================== */
 
-.view_area { position:absolute; z-index:100;
-  transition: all ease;
+.view_area { position:absolute; z-index:100; transition: all ease;
   width:500%; height:100%;}
 .view_area > li { float:left; width:20%; height:100%;
-  background-repeat: no-repeat; background-size: contain;
-  background-position: 50% 50%;}
+  background-repeat: no-repeat; background-size: contain; background-position: 50% 50%;}
 
 /* =========================================== */
 
-#scrollBox { position:relative; width:960px; height:600px; margin:auto;
-  overflow:hidden;
+#scrollBox { position:relative; width:960px; height:600px; margin:auto; overflow:hidden;
   background-color: #cbb;}
-#scrollBox ul { width:500%; height:100%;}
-#scrollBox li { float:left; width:20%; height:100%;
+#scrollBox ul { position:absolute; height:100%;}
+#scrollBox li { float:left; height:100%;
   background-repeat: no-repeat; background-size: auto 80%; background-position: 50% 50%;}
 
 /* =========================================== */
 
-.scrollTop { position:fixed; bottom:45px; left:50%; transform:translateX(516px);
-  width:100px; height:100px;}
+.scrollTop { position:fixed; bottom:45px; left:50%; transform:translateX(516px); width:100px; height:100px;}
   .scrollTop > button { width:100%; height:100%;}
   .scrollTop > button > a { display:block; width:100%; height:100%;  background-color: #555;}
 
