--- a/c_code/e_jquery/css/src/ex_09_notice.css
+++ b/c_code/e_jquery/css/src/ex_09_notice.css
@@ -24,13 +24,19 @@ h2 { width:100%; text-align:center; margin-bottom:1rem;}
 
   /* =============================================================================== */
 
-.indicator    { width:48%; height:20px; margin:auto; margin-top:2rem;
-
+.indicator    { position:relative; width:90%;
+  height:20px; margin:auto; margin-top:2rem;
    padding:0.25rem; border-radius:40px;}
-.indicator ul { height:100%; margin:auto;}
+.indicator ul { width:50%; height:100%; margin:auto; text-align: center;}
 .indicator li { display:inline-block; margin:0 0.4rem; width:32px; height:24px;}
 
 .indicator a  { display:block; width:100%; height:100%; text-align: center; border-radius: 20px;
   box-sizing: border-box;
   background-color:#fff; border:1px solid #07a;}
   .indicator li.action a { font-weight:bold;}
+
+.more_btn { position:absolute; width:70%; height:0; top:0; left:15%; transform: translateY(0.3rem);}
+.more_btn button { width:3.125rem; height: 1.5625rem; font-size: 0.8rem; color: #fff;
+  background-color: #343; border-radius: 1.5625rem;}
+.next_notice { float:right;}
+.prev_notice { float:left; }
